--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
-group 'org.poznansky.crypto.cw'
+group 'org.smirnov.crypto.cw'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -19,7 +19,7 @@ javafx {
 }
 
 application {
-    mainClassName = 'org.poznansky.crypto.cw.App'
+    mainClassName = 'org.smirnov.crypto.cw.App'
 }
 
 dependencies {
